[project]
name = "seleniumscript"
version = "0.0.1"
authors = [
  { name="Brandon Egger", email="brandonegger64@gmail.com" },
]
description = "todo"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mit License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brandonegg/SeleniumScript"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
